fix: keep article tags at the right end if wrapped

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -179,6 +179,7 @@ article > * + * {
 .article-header > ul[role="list"] {
   display: inline-flex;
   flex-flow: row wrap;
+  justify-content: flex-end;
   gap: var(--space-2xs);
 }
 
